[package]
name = "asve"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git" }
raw-window-handle = "0.6"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"
