[package]
name = "asve"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git"}
gpui-component = { git = "https://github.com/adnissen/gpui-component.git" }
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
gl = "0.14"
image = "0.25"
smallvec = "1.13"
ropey = "1.6"
sum_tree = { git = "https://github.com/zed-industries/zed.git", rev = "917148c5ce6b4801dee7ab191b6fb5144f84d0ea" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"
